# SOA_HW_6

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
cassandra/migrations/: 001_keyspace.cql  002_inventory_tables.cql  003_processing_tables.cql  004_orders_tables.cql
docs/: task.md
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: warehouse-consumer.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
schemas/: warehouse_event.avsc
scripts/: query_inventory.py  read_dlq.py  register_schema.py  send_demo_events.py
warehouse/: cassandra_client.py  cassandra_migrations.py  consumer_app.py  consumer_service.py  dlq.py  event_handlers.py  events.py  kafka_client.py  metrics.py  producer_app.py  repositories.py  schema_registry.py  settings.py  validation.py
